
===========================================================================
MARK: released gwenhywfar-1.7.2 (2005/01/30)
===========================================================================


2005/01/30: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- now save all certificates again, but: Only create different extension if
  certificate is new (otherwise older certificates are overwritten)


2005/01/29: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- only save cert if it is new
- decreased verbosity


===========================================================================
MARK: released gwenhywfar-1.7.1 (2005/01/27)
===========================================================================


2005/01/27: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added a timeout catcher on SSL connections waiting to be shut down
- added eror checking for SSL_shutdown
-> finally fixes the nasty SSL bug I was hunting ;-)
  Thanks to Thomas Baumgart for his help with this ;-)


===========================================================================
MARK: released gwenhywfar-1.7.0 (2005/01/26)
===========================================================================


2005/01/26: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- decreased verbosity


2005/01/25: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_IPCManager_CheckConnection()
- added NetTransport flag GWEN_NETTRANSPORT_FLAGS_RESTARTABLE which is
  used by IPC code to restart a connection if it is down
- GWEN_IPCManager_Disconnect() now does clean up an IPC node
- added function GWEN_RingBuffer_Reset()
- added function GWEN_NetTransport_AddFlags()
- added function GWEN_NetTransport_SubFlags()


2005/01/23: Martin Preuss<martin@libchipcard.de>