@@ -1,4 +1,9 @@
 
+2005/02/11: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- this lib now uses $libdir instead of $prefix/lib)
+
+
 ===========================================================================
 MARK: released gwenhywfar-1.7.2 (2005/01/30)
 ===========================================================================
